cache blocked tabgroup state updates and do not check group breaking issues not being part of the updated states

BUG: 300847
FIXED-IN: 4.9
REVIEW: 105114